# ghost

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  bridge_addresses.example.json  cex_wallets.example.json  ghost-design-spec (1).md  mixer_pools.example.json  package.json  protocols.base-sepolia.example.json  protocols.example.json
artifacts/: incident-db43b224-2156-47d8-9808-425816c2a5b2-bf0ef665-3b44-4c12-9dff-4f87cfea9ecd.json
contracts/: GhostBounty.sol  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol  GhostBounty.s.sol  GhostSepoliaDemo.s.sol
contracts/src/: GhostBounty.sol  GhostHook.sol  GhostRegistry.sol  GhostSepoliaDemo.sol
contracts/test/: GhostBounty.t.sol  GhostHook.t.sol  GhostRegistry.t.sol  GhostSepoliaDemo.t.sol
docs/: persistence-architecture.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: demo-terminal.tsx  live-analysis-terminal.tsx  operator-protocol-workspace.tsx  passkey-settings.tsx  protocol-account-table.tsx  sign-in-client.tsx  sign-out-button.tsx  sign-up-client.tsx  site-chrome.tsx
frontend/lib/: navigation.ts  ndjson.ts  protocols.ts  site.ts  utils.ts
frontend/scripts/: run-foundry.mjs  run-next.mjs
migrations/2026-04-23-180100_create_incidents/: up.sql
migrations/2026-04-23-180200_create_incident_artifacts/: down.sql  (+1 more)
scripts/: publish_to_0g.mjs
src/: api.rs  artifacts.rs  config.rs  db.rs  main.rs  model.rs  notifications.rs  orchestrator.rs  protocols.rs  schema.rs  simulation.rs  state.rs
(+118 files in other folders)
