[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["ws", "rustls"] }
alloy = { version = "0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.0", features = ["postgres", "chrono", "uuid", "serde_json"] }
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
bigdecimal = "0.3"
redis = { version = "0.23", features = ["tokio-comp"] }
maxminddb = "0.23"
hex = "0.4"
sha2 = "0.10"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
headless_chrome = "1.0"
actix-web = "4.0"
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
scraper = "0.19"
rss = "2"
